# Credit_scoring_model

./: .gitignore  README.md  app.py  pyproject.toml
src/credit_scoring/: builders.py  data.py  features.py  metrics.py  model.py  nb_features.py  preprocess.py  train.py
src/credit_scoring/app/: gradio_app.py
tests/: test_features.py  test_metrics.py  test_model.py  test_train.py
